tests/negative/scope/class-reuses-type-parameter-name/test.smol
package testing;

class Foo[#A, #A] {}

class Test {
	fn main() Unit {
		var x String = "foo";
	}
}
